# Brownie-Bot

./: .env  .gitignore  README.md  brownie_retriever.py  discord_bot.py  pyproject.toml
brownie-bot/: brownie_request.py  brownie_retriever.py  config.json  discord_bot.py
